fix(android): keep companion compatible with Android 8+